@@ -36,97 +36,6 @@ Boston, MA 02111-1307, USA.  */
 #include "g95.h"
 #include "trans.h"
 
-/* Mark *EXPR_P as not simplified.  */
-void
-mark_not_simple (tree *expr_p)
-{
-  TREE_NOT_GIMPLE (*expr_p) = 1;
-}
-
-/* Similar to copy_tree_r() but do not copy SAVE_EXPR nodes.  These nodes
-   model computations that should only be done once.  If we were to unshare
-   something like SAVE_EXPR(i++), the simplification process would create
-   wrong code.
-
-   Additionally, copy any flags that were set in the original tree.  */
-
-static tree
-mostly_copy_tree_r (tree *tp, int *walk_subtrees, void *data)
-{
-  enum tree_code code = TREE_CODE (*tp);
-  /* Don't unshare decls, blocks, types and SAVE_EXPR nodes.  */
-  if (TREE_CODE_CLASS (code) == 't'
-      || TREE_CODE_CLASS (code) == 'd'
-      || TREE_CODE_CLASS (code) == 'c'
-      || TREE_CODE_CLASS (code) == 'b'
-      || code == SAVE_EXPR
-      || *tp == empty_stmt_node)
-    *walk_subtrees = 0;
-  else if (code == STMT_EXPR || code == SCOPE_STMT || code == BIND_EXPR)
-    /* Unsharing STMT_EXPRs doesn't make much sense; they tend to be
-       complex, so they shouldn't be shared in the first place.  Unsharing
-       SCOPE_STMTs breaks because copy_tree_r zeroes out the block.  */
-    abort ();
-  else
-    {
-      enum tree_flags flags = tree_flags (*tp);
-      copy_tree_r (tp, walk_subtrees, data);
-      if (flags)
-	set_tree_flag (*tp, flags);
-    }
-
-  return NULL_TREE;
-}
-
-/* Callback for walk_tree to unshare most of the shared trees rooted at
-   *TP.  If *TP has been visited already (i.e., TREE_VISITED (*TP) == 1),
-   then *TP is deep copied by calling copy_tree_r.
-
-   This unshares the same trees as copy_tree_r with the exception of
-   SAVE_EXPR nodes.  These nodes model computations that should only be
-   done once.  If we were to unshare something like SAVE_EXPR(i++), the
-   simplification process would create wrong code.  */
-
-static tree
-copy_if_shared_r (tree *tp, int *walk_subtrees, void *data ATTRIBUTE_UNUSED)
-{
-  /* If this node has been visited already, unshare it and don't look
-     any deeper.  */
-  if (TREE_VISITED (*tp))
-    {
-      walk_tree (tp, mostly_copy_tree_r, NULL, NULL);
-      *walk_subtrees = 0;
-    }
-  else
-    /* Otherwise, mark the tree as visited and keep looking.  */
-    TREE_VISITED (*tp) = 1;
-
-  return NULL_TREE;
-}
-
-static tree
-unmark_visited_r (tree *tp, int *walk_subtrees ATTRIBUTE_UNUSED,
-                  void *data ATTRIBUTE_UNUSED)
-{
-  if (TREE_VISITED (*tp))
-    TREE_VISITED (*tp) = 0;
-  else
-    *walk_subtrees = 0;
-
-  return NULL_TREE;
-}
-
-
-/* Unshare T and all the trees reached from T via TREE_CHAIN.  */
-
-void
-unshare_all_trees (t)
-     tree t;
-{
-  walk_tree (&t, copy_if_shared_r, NULL, NULL);
-  walk_tree (&t, unmark_visited_r, NULL, NULL);
-}
-
 /*  Replaces T; by a COMPOUND_STMT containing {T;}.  */
 void
 tree_build_scope (t)
